; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-cfg.c_bsi_insert_on_edge_immediate.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-cfg.c_bsi_insert_on_edge_immediate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BSI_NEW_STMT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @bsi_insert_on_edge_immediate(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %6, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @PENDING_STMT(i32 %7)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @gcc_assert(i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = call i64 @tree_find_edge_insert_loc(i32 %13, i32* %5, i32** %6)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @BSI_NEW_STMT, align 4
  %19 = call i32 @bsi_insert_after(i32* %5, i32 %17, i32 %18)
  br label %24

20:                                               ; preds = %2
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @BSI_NEW_STMT, align 4
  %23 = call i32 @bsi_insert_before(i32* %5, i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %20, %16
  %25 = load i32*, i32** %6, align 8
  ret i32* %25
}

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i32 @PENDING_STMT(i32) #1

declare dso_local i64 @tree_find_edge_insert_loc(i32, i32*, i32**) #1

declare dso_local i32 @bsi_insert_after(i32*, i32, i32) #1

declare dso_local i32 @bsi_insert_before(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
